[package]
name = "scalar-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reth node implementation"

[package.metadata.cargo-udeps.ignore]
normal = [
    # Used for diagrams in docs
    "aquamarine",
]

[dependencies]
# reth
reth-config = { path = "../../reth/crates/config" }
reth-primitives = { path = "../../reth/crates/primitives", features = [
    "arbitrary",
    "clap",
] }
reth-db = { path = "../../reth/crates/storage/db", features = [
    "mdbx",
    "test-utils",
] }
# TODO: Temporary use of the test-utils feature
reth-provider = { path = "../../reth/crates/storage/provider", features = [
    "test-utils",
] }
reth-revm = { path = "../../reth/crates/revm" }
reth-revm-inspectors = { path = "../../reth/crates/revm/revm-inspectors" }
reth-stages = { path = "../../reth/crates/stages" }
reth-interfaces = { path = "../../reth/crates/interfaces", features = [
    "test-utils",
    "clap",
] }
reth-transaction-pool = { path = "../../reth/crates/transaction-pool" }
reth-beacon-consensus = { path = "../../reth/crates/consensus/beacon" }
reth-auto-seal-consensus = { path = "../../reth/crates/consensus/auto-seal" }
reth-consensus-common = { path = "../../reth/crates/consensus/common" }
reth-blockchain-tree = { path = "../../reth/crates/blockchain-tree" }
reth-rpc-engine-api = { path = "../../reth/crates/rpc/rpc-engine-api" }
reth-rpc-builder = { path = "../../reth/crates/rpc/rpc-builder" }
reth-rpc = { path = "../../reth/crates/rpc/rpc" }
reth-rpc-types = { path = "../../reth/crates/rpc/rpc-types" }
reth-rpc-types-compat = { path = "../../reth/crates/rpc/rpc-types-compat" }
reth-rpc-api = { path = "../../reth/crates/rpc/rpc-api", features = ["client"] }
reth-network = { path = "../../reth/crates/net/network", features = ["serde"] }
reth-network-api = { path = "../../reth/crates/net/network-api" }
reth-downloaders = { path = "../../reth/crates/net/downloaders", features = [
    "test-utils",
] }
reth-tracing = { path = "../../reth/crates/tracing" }
reth-tasks = { path = "../../reth/crates/tasks" }
reth-net-nat = { path = "../../reth/crates/net/nat" }
reth-payload-builder = { path = "../../reth/crates/payload/builder" }
reth-basic-payload-builder = { path = "../../reth/crates/payload/basic" }
reth-discv4 = { path = "../../reth/crates/net/discv4" }
reth-prune = { path = "../../reth/crates/prune" }
reth-snapshot = { path = "../../reth/crates/snapshot", features = ["clap"] }
reth-trie = { path = "../../reth/crates/trie" }
reth-nippy-jar = { path = "../../reth/crates/storage/nippy-jar" }

alloy-rlp = "0.3"
# crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# tracing
tracing.workspace = true

# io
fdlimit = "0.2.1"
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.0.0"
dirs-next = "2.0.0"
confy = "0.5"
toml = { workspace = true, features = ["display"] }

# metrics
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15.0"
metrics-process = "1.0.9"
reth-metrics = { path = "../../reth/crates/metrics" }
metrics = "0.21.1"

# test vectors generation
proptest.workspace = true
rand.workspace = true

# tui
comfy-table = "7.0"
crossterm = "0.27.0"
tui = "0.19.0"
human_bytes = "0.4.1"

# async
async-stream = "0.3.5"
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
tokio-stream.workspace = true
futures.workspace = true
futures-util = "0.3.25"
pin-project = "1.0.12"

# http/rpc
jsonrpsee = { workspace = true, features = ["server"] }
tower-http = { version = "0.4", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = "0.14"
# misc
aquamarine = "0.3"
eyre.workspace = true
clap = { workspace = true, features = ["derive"] }
tempfile.workspace = true
backon = "0.4"
thiserror.workspace = true
pretty_assertions = "1.3.0"
humantime = "2.1.0"
const-str = "0.5.6"
boyer-moore-magiclen = "0.2.16"
itertools.workspace = true
rayon.workspace = true
prost = "0.12.1"
protobuf = { version = "2.28", features = ["with-bytes"] }
protobuf-src = "1.1.0"
tonic = { version = "0.10", features = ["transport", "tls"] }

[target.'cfg(not(windows))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
jemalloc-prof = ["jemalloc", "jemallocator?/profiling"]
min-error-logs = ["tracing/release_max_level_error"]
min-warn-logs = ["tracing/release_max_level_warn"]
min-info-logs = ["tracing/release_max_level_info"]
min-debug-logs = ["tracing/release_max_level_debug"]
min-trace-logs = ["tracing/release_max_level_trace"]
optimism = [
    "reth-primitives/optimism",
    "reth-revm/optimism",
    "reth-interfaces/optimism",
    "reth-rpc/optimism",
    "reth-rpc-engine-api/optimism",
    "reth-transaction-pool/optimism",
    "reth-provider/optimism",
    "reth-beacon-consensus/optimism",
    "reth-auto-seal-consensus/optimism",
    "reth-basic-payload-builder/optimism",
    "reth-network/optimism",
    "reth-network-api/optimism",
    "reth-blockchain-tree/optimism",
]
# no-op feature flag for switching between the `optimism` and default functionality in CI matrices
ethereum = []

[build-dependencies]
prost-build = "0.12.1"
tonic-build = { version = "0.10", features = ["prost", "transport"] }
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[[bin]]
name = "scalar-reth"
path = "src/main.rs"
