[package]
name = "scalar-swarm-config"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anyhow.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

move-bytecode-utils = { path = "../../sui/external-crates/move/crates/move-bytecode-utils" }
narwhal-config = { path = "../../sui/narwhal/config" }
shared-crypto = { path = "../../sui/crates/shared-crypto" }
sui-config = { path = "../../sui/crates/sui-config" }
sui-protocol-config = { path = "../../sui/crates/sui-protocol-config" }
sui-types = { path = "../../sui/crates/sui-types" }
sui-genesis-builder = { path = "../../sui/crates/sui-genesis-builder" }
workspace-hack = { path = "../../sui/crates/workspace-hack" }

[target.'cfg(msim)'.dependencies]
sui-simulator = { path = "../../sui/crates/sui-simulator" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

sui-execution = { path = "../../sui/sui-execution" }
