[package]
name = "scalar-transaction-builder"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
bcs.workspace = true

move-binary-format.workspace = true
scalar-json-rpc-types.workspace = true
scalar-types.workspace = true
scalar-json.workspace = true
sui-protocol-config.workspace = true

move-core-types.workspace = true
workspace-hack.workspace = true
