[package]
name = "scalar-transaction"
version = "0.0.0"
authors = ["Scalar <tai@scalar.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

#sui-framework.workspace = true
scalar-types.workspace = true
#scalar-move.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
fastcrypto = { workspace = true }
workspace-hack.workspace = true

[dev-dependencies]
test-fuzz.workspace = true
scalar-types = { workspace = true, features = ["test-utils"] }
